--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
      button:hover{
                   background-color:#2d84d6;
         }  
+        @media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
     </style>
 </head>
 <body>
