--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       }
   
      .regform{
+         display:flex;
+         flex-shrink:2
             width:800px;
       background-color:rgb(0,0,0,0.6);
       margin:auto;
